added support for projects to more explicitly specify concealed packages they use and modules they require